# rustdesk_harmonyos

./: .gitattributes  .gitignore  CHANGELOG.md  COMPLIANCE.md  CONTRIBUTING.md  LICENSE  NOTICE  PRIVACY.md  README.md  RELEASE_COMPLIANCE_CHECKLIST.md  REUSE.toml  SECURITY.md  SOURCE_OFFER.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  build-profile.json5  local.properties  oh-package.json5  package-lock.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compliance_report.yml  config.yml
.github/workflows/: build-harmonyos-linux.yml  build-harmonyos.yml  cleanup-github-history.yml  cleanup-releases.yml  compliance-check.yml  force-backup-master.yml  test-harmonyos-sdk-token.yml
.reuse/: dep5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
docs/: AGENT_HANDOFF.md  AGENT_MEMORY.md  ASSET_PROVENANCE.md  BUILD_ARCHIVE.md  CONNECTION_DEBUG_LOG.md  CORE.md  CURRENT_STATUS.md  DESIGN.md  DIRECTORY_CONVENTIONS.md  FILES.md  FUNCTION_LOGIC_AUDIT_2026-06-05.md  FUNCTION_LOGIC_AUDIT_2026-06-06.md  GITHUB_HISTORY_CLEANUP.md  GIT_PUBLISH.md  HARMONYOS_TOOLCHAIN.md  ISSUES.md  LEGAL_AUDIT.md  PROGRESS.md  README.md  RELEASE_ARTIFACT_POLICY.md  SBOM_POLICY.md  SESSION3_SUMMARY.md  SUPPLY_CHAIN.md  UBUNTU_CROSS_COMPILE_GUIDE.md  UI.md  WINDOWS_SERVICE_OPTIMIZATION.md  WORKSPACE_PATHS.md
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  ohos_stubs.cpp  ohos_video_decoder.cpp  rustdesk_bridge_abi.h  rustdesk_bridge_loader.cpp  rustdesk_core_stub.cpp  undefined_symbols.txt
entry/src/main/cpp/types/librustdesk_bridge/: index.d.ts  oh-package.json5
entry/src/main/ets/common/: BuildInfo.ets  CommonComponents.ets  CoreBuildInfo.ets  DeviceIdFormatter.ets  ErrorHandler.ets  PerformanceMonitor.ets  SessionDiagnostic.ets  ThemeConfig.ets  Types.ets
entry/src/main/ets/components/: KeyboardToolbar.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/network/: ConnectionQualityManager.ets  RustDeskConnection.ets  RustDeskProtocol.ets
entry/src/main/ets/pages/: AddressBook.ets  Chat.ets  FileTransfer.ets  Index.ets  LoginPage.ets  MyDevice.ets  RemoteControl.ets  Scan.ets  Terminal.ets  ViewCamera.ets  WebLoginPage.ets
entry/src/main/ets/services/: AccountService.ets  AppContextService.ts  AppDataService.ets  AudioService.ets  ChatService.ets  CoreLoaderService.ts  FileAuthorizationService.ts  FileTransferService.ets  FrameService.ets  HttpClient.ets  I18nService.ets  InputService.ets  LanDiscoveryService.ets  NativeRustDeskBridge.ts  OfficialRustDeskBridge.ets  OfficialSessionTextFormatter.ets  OfficialSessionTransport.ets  OfficialSessionTypes.ets  PermissionService.ets  PreferenceStore.ts  ScreenCaptureService.ets  TerminalService.ets  (+3 more)
hvigor/: hvigor-config.json5
native_rust_core/: Cargo.toml
native_rust_core/src/: bridge_api.rs  bridge_state.rs  lib.rs
oh_modules/.ohpm/: lock.json5
reports/: connection_chain_audit_latest.md  full_function_audit_latest.md  hilog_latest_after_0224_core80_wireless_app_strict_clean.txt  hilog_latest_after_0225_core80_wireless_app_strict_clean.txt  hilog_latest_after_0226_localcore_wireless_app_strict_clean_x.txt  hilog_latest_after_0227_core81_wireless_app_strict_clean_x.txt  hilog_latest_after_core64.txt  hilog_latest_after_core70.txt  hilog_latest_after_core71.txt  hilog_latest_after_core73_locked.txt  hilog_latest_after_core74_locked.txt  hilog_latest_after_core74_post_docs_unlocked.txt  hilog_latest_after_core74_unlocked.txt  hilog_latest_after_terminal_core_local.txt
rustdesk_harmonyos/: CHANGELOG.md
rustdesk_harmonyos/AppScope/: app.json5
rustdesk_harmonyos/docs/: BUILD_ARCHIVE.md  CORE.md  DESIGN.md  FILES.md  PROGRESS.md  README.md
rustdesk_harmonyos/entry/: oh-package-lock.json5
rustdesk_harmonyos/entry/src/main/: module.json5
rustdesk_harmonyos/native_rust_core/: build.rs
rustdesk_harmonyos/native_rust_core/src/: lib.rs
rustdesk_harmonyos/scripts/: AUTO_BUILD_INSTALL.bat  INSTALL_HAP.bat  _ohos-sdk-env.cmd  _ohos-sdk-env.sh  aarch64-unknown-linux-ohos-clang++.bat  aarch64-unknown-linux-ohos-clang++.cmd  aarch64-unknown-linux-ohos-clang.bat  armv7-unknown-linux-ohos-clang++.sh  armv7-unknown-linux-ohos-clang.cmd  armv7-unknown-linux-ohos-clang.sh  build_harmonyos_hap.ps1  build_native_bridge.bat  build_native_bridge.ps1  build_native_bridge.sh  build_native_module.sh  build_with_patch.js  clean_project.ps1  extract_icons.py  extract_linux_native_sdk.sh  find_unused.sh  install_native_hap.sh  install_vcpkg_opus.ps1  install_with_core.sh  ohos-llvm-ar.bat  ohos-llvm-ar.sh  repack_native_hap.sh  run_hvigor_with_sdk_patch.js  sign_native_hap_openharmony.sh  verify_native_harmonyos_hap.ps1  x86_64-unknown-linux-ohos-clang++.sh  x86_64-unknown-linux-ohos-clang.cmd  x86_64-unknown-linux-ohos-clang.sh  启动DevEco_修复SDK环境.bat  清理缓存.bat  编译HAP_修复SDK环境.bat
rustdesk_harmonyos/signing/: debug_hos.cer  debug_hos.p12  test.p12
scripts/: AUTO_BUILD_INSTALL.bat  README.md  _ohos-sdk-env.cmd  _ohos-sdk-env.sh  aarch64-unknown-linux-ohos-clang++.sh  aarch64-unknown-linux-ohos-clang.cmd  aarch64-unknown-linux-ohos-clang.sh  audit_connection_chain.ps1  audit_full_function_rounds.ps1  backup_project.ps1  build_full_hap.bat  build_hap.bat  build_harmonyos_hap.ps1  build_native_bridge.ps1  build_native_bridge.sh  check_compliance.sh  check_harmony_signing_profile.ps1  clean_project.ps1  clean_project_artifacts.sh  cleanup_github_history.sh  dedup_abi.js  dedup_loader.js  dedup_loader_funcs.js  export_deveco_signing_command.js  extract_linux_native_sdk.sh  fetch_native_core.ps1  generate_bridge_api.js  generate_cpp_bridge.js  generate_cpp_bridge.py  generate_ts_bridge.js  github_build_harmonyos.ps1  github_build_harmonyos_linux.sh  ohos-llvm-ar.cmd  optimize_services.bat  regenerate_all.js  rename_mapping.js  restore_services.bat  run_hvigor_with_sdk_patch.js  stage_project_for_build.ps1  switch_deveco_paths.ps1  (+2 more)
signing/: debug_hos.p7b  test_root.cer
signing/material/: .gitkeep
(+29 files in other folders)
