[package]
name = "rustdesk_harmony_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
rustdesk_core = { package = "rustdesk", path = "../../99_Temp/rustdesk-master", default-features = false, features = ["use_dasp"] }

[patch."https://github.com/rustdesk-org/machine-uid"]
machine-uid = { path = "../../99_Temp/rustdesk_harmonyos_build/patches/machine-uid/381ff57" }
